--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,15 @@ body {
 
 .pricing-card {
     transition: all .2s ease-in-out;
+    color: #111;
+    display: inline-block;
+    width: 100%;
 }
 
 .pricing-card:hover {
+    color: #111;
     transform: scale(1.1);
+    text-decoration: none;
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
