--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ table.table-bordered .fa {
 
 .custom-checkbox .checkmark {
     position: absolute;
-    top: 23%;
+    top: 0;
     right: 0;
     height: 25px;
     width: 25px;
@@ -330,6 +330,17 @@ table.table-bordered .fa {
     outline: none;
 }
 
+p.text-darkblue {
+    margin-bottom: 0 !important;
+}
+
+@media(max-width: 767px) {
+    .to-top {
+        bottom: 16px;
+        right: 16px;
+    }
+}
+
 .to-top:focus {
     outline: none;
 }
@@ -341,4 +352,191 @@ table.table-bordered .fa {
     -moz-border-radius: 0;
     -ms-border-radius: 0;
     -o-border-radius: 0;
+}
+
+.plan-profile__discount-area h4 {
+    font-weight: 300;
+}
+
+.btn-outline-dark.focus,
+.btn-outline-dark:focus,
+outline-dark:not(:disabled):not(.disabled):active:focus {
+    box-shadow: none !important;
+}
+
+
+/* Table/ */
+
+section#inno--compare-packages .compare-packages_row#compare-packages-header {
+    transition: all .2s ease-in;
+    margin-top: 4rem;
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square.head h5 {
+    margin: auto 0;
+}
+
+section#inno--compare-packages .compare-packages_row {
+    justify-content: center;
+    flex-wrap: nowrap;
+    margin: .5% 0;
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square.head {
+    display: flex;
+    flex-direction: column;
+    height: 7rem;
+    justify-content: center;
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square.head h5 {
+    font-size: 23px;
+    font-weight: 500;
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square:first-child {
+    border-top-right-radius: .1rem;
+    border-bottom-right-radius: .1rem;
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square {
+    flex-basis: 24%;
+    margin: 0 .25%;
+    text-align: center;
+    background-color: #fff;
+    padding: .75rem;
+    min-height: 100%;
+    border: 1px solid #dee2e6;
+    box-shadow: 1px 1px 2px 0px #bbb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square.label p {
+    /* font-weight: 600;
+    font-size: 1.5rem; */
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square.data .true,
+section#inno--compare-packages .compare-packages_row .cp-square.data .false {
+    margin-bottom: 0 !important;
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square.data .true:before {
+    background-image: url(../images/check-circle.svg);
+}
+
+
+/* section#inno--compare-packages .compare-packages_row .cp-square.data .false:before {
+    background-image: url(../../assets/img/icon-false.svg);
+} */
+
+section#inno--compare-packages .compare-packages_row .cp-square.data .false:before,
+section#inno--compare-packages .compare-packages_row .cp-square.data .true:before {
+    content: "";
+    display: block;
+    background-repeat: no-repeat;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square.data {
+    position: relative;
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square.white {
+    background-color: #fff;
+    border: 0e6;
+    box-shadow: none;
+}
+
+.compare-packages .compare-packages_row .cp-square.logo {
+    padding: 0 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section#inno--compare-packages .compare-packages_row .cp-square.logo img {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (max-width: 767px) {
+    section#inno--compare-packages .compare-packages_row .cp-square {
+        padding: 6px;
+    }
+    section#inno--compare-packages .compare-packages_row .cp-square .btn {
+        padding: 5px 10px;
+        font-size: 12px;
+        font-weight: bold;
+    }
+}
+
+
+/* loader */
+
+.loading-overlay {
+    background: #ffffffb8;
+    color: #FFF;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes ldio-x3j41sdsqb {
+    0% {
+        transform: rotate(0deg)
+    }
+    50% {
+        transform: rotate(180deg)
+    }
+    100% {
+        transform: rotate(360deg)
+    }
+}
+
+.ldio-x3j41sdsqb div {
+    position: absolute;
+    animation: ldio-x3j41sdsqb 1s linear infinite;
+    width: 160px;
+    height: 160px;
+    top: 20px;
+    left: 20px;
+    border-radius: 50%;
+    box-shadow: 0 4px 0 0 #ee5050;
+    transform-origin: 80px 82px;
+}
+
+.loadingio-spinner-eclipse-5filpdana3s {
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    overflow: hidden;
+    background: none;
+}
+
+.ldio-x3j41sdsqb {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: translateZ(0) scale(1);
+    backface-visibility: hidden;
+    transform-origin: 0 0;
+    /* see note above */
+}
+
+.ldio-x3j41sdsqb div {
+    box-sizing: content-box;
 }
